--- a/volunteer_matching.html
+++ b/volunteer_matching.html
@@ -20,7 +20,7 @@ font-family: 'Roboto', sans-serif;
 <div id = "age">
  Please enter a minimum age for the volunteer
  <br>
- <input type ="number" id="required_age">
+ <input type ="number" id="required_age" onkeyup="checkAge(event)">
 </div>
 <br>
 <p>Just choose the number corresponding to the level of skill you require </p>
@@ -60,19 +60,19 @@ font-family: 'Roboto', sans-serif;
 <div id = "requirements">
 Please enter a required level of English
  <br>
- <input list= "level" id="English_level">
+ <input list= "level" id="English_level" >
 <br>
 Please enter a required level of Russian
  <br>
- <input list = "level" id = "Russian_level">
+ <input list = "level" id = "Russian_level" >
 <br>
 Please enter a required level of Armenia
 <br>
-<input list= "level" id="Armenian_level">
+<input list= "level" id="Armenian_level" >
 <br>
 Please enter a required level of German
 <br>
- <input list= "level" id="German_level">
+ <input list= "level" id="German_level" ">
 <br>
 </div>
 <br>
