--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body onload="document.registration.name.focus();">
-<h1>Registration Form From Anahit Harutyunyan</h1>
+<h1>Registration Form</h1>
 As a potential employee PLEASE fill the form very attentively
 <form name='registration' onSubmit="return formValidation();">
 
@@ -67,7 +67,7 @@ As a potential employee PLEASE fill the form very attentively
 <br><li><label for="email">Email:</label></li>
 <input type="text" id="email" name="email" size="50" /><br>
 
-<br><li><label>Known languages:</label></li><br><br>
+<br><li><label for="language">Known languages:</label></li><br><br>
 <input type="checkbox" id="armlang" name="armlang" value="arm" />Armenian<br>
 <input type="checkbox" id="ruslang" name="ruslang" value="rus" />Russian<br>
 <input type="checkbox" id="englang" name="englang" value="eng" />English<br>
@@ -97,6 +97,5 @@ As a potential employee PLEASE fill the form very attentively
 </form>
 
 <button id="button">Submit</button> 
-
 </body>
 </html>
